add doc_type, api getAllGenre